--- a/style.css
+++ b/style.css
@@ -98,6 +98,35 @@ option {
     color: #C6C6C6
 }
 
+.loading {
+    display: none;
+    position: absolute;
+    width: 129px;
+    height: 54px;
+    top : 50% ;
+    left: 50%;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 28px;
+    align-items: center;
+    text-align: center;
+
+    color: #000000;
+
+}
+
+.cover {
+    display: none;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    
+}
+
 
 
 
