--- a/style.css
+++ b/style.css
@@ -127,6 +127,78 @@ option {
     
 }
 
+header { 
+    height: 50px; 
+    padding: 0 20px; 
+    background: #f5f5f6; 
+    display: flex; 
+    align-items: center; 
+    justify-content: space-around; 
+} 
+ 
+header img { 
+    height: 23px; 
+} 
+ 
+header div { 
+    display: flex; 
+    font-weight: 500; 
+    font-size: 11px; 
+    line-height: 13px; 
+    letter-spacing: 0.06em; 
+    color: #959ba4; 
+} 
+ 
+header div p { 
+    margin-left: 20px; 
+} 
+ 
+header div p:first-child { 
+    margin-left: 0; 
+    color: black; 
+} 
+ 
+header button { 
+    font-family: Roboto; 
+    font-style: normal; 
+    font-size: 11px; 
+    line-height: 13px; 
+    display: flex; 
+    align-items: center; 
+    text-align: center; 
+    letter-spacing: 0.06em; 
+    font-weight: 500; 
+    width: 58px; 
+    height: 33px; 
+    background: #ffffff; 
+    border-radius: 4px; 
+    border: 0; 
+    justify-content: center; 
+} 
+ 
+header div p:hover, 
+header button:hover { 
+    cursor: pointer; 
+} 
+ 
+.converter { 
+    width: 587px; 
+    height: 32px; 
+    margin-left: 448px; 
+    margin-top: 55px; 
+    margin-bottom: 35px; 
+    font-family: Roboto; 
+    font-style: normal; 
+    font-weight: bold; 
+    font-size: 36px; 
+    line-height: 42px; 
+    color: #000000; 
+} 
+ 
+.changer { 
+    margin-top: 100px; 
+}
+
 
 
 
